fix after switch to firebase